# qt_tools

./: .gitignore  CMakeLists.txt  Windeployqt.cmake  demo_app.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
res/: res.qrc  ui.css
src/: common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
